# nonebot_plugin_real_netizens

./: .gitignore  LICENSE  README.md  __init__.py  admin_commands.py  behavior_decider.py  character_manager.py  config.py  group_config_manager.py  handlers.py  image_processor.py  llm_generator.py  main.py  memory_manager.py  message_builder.py  message_processor.py  pyproject.toml  requirements-dev.txt  requirements.txt  schedulers.py  setup.py  大纲.md  笔记.md  问题.md
.history/: __init___20240903101721.py  __init___20240903144930.py  character_manager_20240903111101.py  character_manager_20240903151552.py  config_20240903115607.py  config_20240903123404.py  group_config_manager_20240903145111.py  handlers_20240903144852.py  handlers_20240903145333.py  main_20240903111101.py  main_20240903120443.py  main_20240903125340.py  memory_manager_20240903144031.py  memory_manager_20240903144433.py  message_builder_20240903122618.py  message_processor_20240903111101.py  message_processor_20240903121419.py  message_processor_20240903122807.py  schedulers_20240903144903.py
.history/config/: friend_config_20240903111008.yml  friend_config_20240903113139.yml  friend_config_20240903113201.yml  friend_config_20240903114128.yml  friend_config_20240903115444.yml  friend_config_20240903123216.yml  friend_config_20240903123312.yml  friend_config_20240903145443.yml  friend_config_20240903145626.yml  friend_config_20240903145646.yml
.history/db/: __init___20240903102129.py  database_20240903095831.py  database_20240903101745.py  models_20240903101737.py  user_info_service_20240903100344.py  user_info_service_20240903101753.py
db/: __init__.py  database.py  models.py  user_info_service.py
nonebot_plugin_real_netizens/: __init__.py  admin_commands.py  behavior_decider.py  character_manager.py  config.py  group_config_manager.py  handlers.py  image_processor.py  llm_generator.py  logger.py  main.py  memory_manager.py  message_builder.py  message_processor.py  resource_loader.py  schedulers.py
nonebot_plugin_real_netizens/config/: friend_config.yml
nonebot_plugin_real_netizens/db/: __init__.py  database.py  models.py  user_info_service.py
nonebot_plugin_real_netizens/res/character/: nolll.json
nonebot_plugin_real_netizens/res/preset/: 预设示例.json
res/world/: 世界书条目示例.json
tests/: check_dependencies.py  conftest.py  setup.py  test_behavior_decider.py  test_character_manager.py  test_config.py  test_image_processor.py  test_llm_generator.py  test_message_processor.py
tests/test_config/: test_friend_config.yml
