[tool.poetry]
name = "nonebot_plugin_real_netizens"
version = "0.1.0"
description = "AI虚拟群友插件 for Nonebot2"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0"
sqlalchemy = "^1.4.0"
pydantic = "^1.8.0"
PyYAML = "^6.0"
aiohttp = "^3.8.0"
nonebot-adapter-onebot = "^2.0.0"
nonebot-plugin-datastore = "^0.1.0"
nonebot-plugin-txt2img = "^0.3.0"
nonebot-plugin-apscheduler = "^0.2.0"
nonebot-plugin-userinfo = "^0.1.0"

# 添加其他依赖
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.nonebot]
plugins = ["nonebot_plugin_real_netizens"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]